--- a/package.json
+++ b/package.json
@@ -1,19 +1,8 @@
 {
-  "name": "v0-conflict-resolver-backend",
-  "version": "1.0.0",
-  "description": "Backend para resolução de conflitos de merge usando a API v0",
-  "main": "server.js",
+  "name": "my-v0-project",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "dependencies": {
-    "axios": "^1.6.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "build": "echo 'no build script'"
   }
 }
